--- a/sys/cus.html
+++ b/sys/cus.html
@@ -324,11 +324,11 @@
 			},
 			"order": [],
 			"columns": [
-				{"sTitle":"客户编号", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "20",editable:true},
+<!--				{"sTitle":"客户编号", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "20",editable:true},-->
 				{"sTitle":"客户名称", "mDataProp": "name","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
 				{"sTitle":"客户电话", "mDataProp": "phone","sClass": "center", "bSortable": false, "sWidth": "100",editable:true},
 				{"sTitle":"客户地址", "mDataProp": "address","sClass": "center", "bSortable": false, "sWidth": "200",editable:true},
-				{"sTitle":"负责人", "mDataProp": "cusName","sClass": "center", "bSortable": false, "sWidth": "150",editable:true},
+				{"sTitle":"业务员", "mDataProp": "cusName","sClass": "center", "bSortable": false, "sWidth": "150",editable:true},
 				{"sTitle":"操作人", "mDataProp": "medicalAdminName","sClass": "center", "bSortable": false, "sWidth": "150"},
 				{"sTitle":"操作时间", "mDataProp": "createTime","sClass": "center", "bSortable": false, "sWidth": "200",mRender:function (data){
 						var date = new Date(data);
