--- a/sys/depository.html
+++ b/sys/depository.html
@@ -338,7 +338,7 @@
 			"columns": [
 				{"sTitle":"仓库编号", "mDataProp": "id","targets": 0,"sClass": "center", "bSortable": false, "sWidth": "100"},
 				// {"data": 'name',"bSearch":true},
-				{"sTitle":"库房名称", "mDataProp": "name","sClass": "center", "bSortable": false, "sWidth": "300",editable:true},
+				{"sTitle":"商业公司", "mDataProp": "name","sClass": "center", "bSortable": false, "sWidth": "300",editable:true},
 				{"sTitle":"操作人", "mDataProp": "medicalAdminName","sClass": "center", "bSortable": false, "sWidth": "200"},
 
 				{"sTitle":"操作", "mDataProp": "id","sClass": "center", "bSortable": false, "sWidth": "100",mRender:function (data){
