--- a/sys/add-user.html
+++ b/sys/add-user.html
@@ -242,6 +242,7 @@
 										<select class="form-control" id="role">
 											<option value="0">普通员工</option>
 											<option value="1">管理员</option>
+											<option value="3">超级管理员</option>
 										</select>
 									</div>
 <!--									<div class="form-group col-md-6">-->
