--- a/sys/edit-user.html
+++ b/sys/edit-user.html
@@ -246,6 +246,7 @@
 										<option value="">请选择角色<option>
 										<option value="0">普通员工</option>
 										<option value="1">管理员</option>
+										<option value="3">超级管理员</option>
 									</select>
 								</div>
 								<!--									<div class="form-group col-md-6">-->
